[package]
name = "afhds2"
version = "0.1.0"
edition = "2021"

[dependencies]
a7105 = { path = "../../a7105", default-features = false }
embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }

[features]
default = ["blocking"]
async = ["a7105/async", "embedded-hal-async"] 
blocking = ["a7105/blocking", "embedded-hal"]